# guardian

./: .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  README.md
src/: CMakeLists.txt  main.cpp
src/Common/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  FileUtils.cpp  FileUtils.h
src/Core/: CMakeLists.txt  Checker.cpp  Checker.h
src/Filesystem/: CMakeLists.txt  FileIterator.h
src/Loader/: CMakeLists.txt  JsonLoader.cpp  JsonLoader.h
testdata/baseTypeDifferent/base/: baseContract_StateVariables.json
testdata/baseTypeDifferent/new/: newContract_StateVariables.json
testdata/multiContract/base/: AA_StateVariables.json  String_StateVariables.json  base.sol  baseContract_StateVariables.json
testdata/multiContract/new/: A.sol  AA_StateVariables.json  String_StateVariables.json  new.sol  newContract_StateVariables.json
testdata/nameDifferent/: test.sh
testdata/nameDifferent/new/: newContract_StateVariables.json
testdata/sizeDifferent/: test.sh
testdata/sizeDifferent/base/: baseContract_StateVariables.json
testdata/sizeDifferent/new/: newContract_StateVariables.json
testdata/structDifferent/base/: baseContract_StateVariables.json
testdata/structDifferent/new/: new.sol  newContract_StateVariables.json
